--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,53 @@ h1 {
   cursor: pointer;
   text-decoration: none;
   color: rgb(223, 27, 203);
-  border: currentColor 0.125em solid;
+  border: rgb(223, 27, 203) 0.125em solid;
   padding: 0.25em 1em;
   border-radius: 0.25em;
   text-shadow: 0 0 0.125em hsl(0, 0%, 70%), 0 0 0.25em currentColor;
-  box-shadow: 0 0 0.5em 0 currentColor, inset 0 0 0.5em 0 currentColor;
+  box-shadow: 0 0 0.5em 0 rgb(223, 27, 203), inset 0 0 0.5em 0 rgb(223, 27, 203);
+
+  position: relative;
+}
+
+.boton-neon::before {
+  pointer-events: none;
+  content: "";
+  position: absolute;
+  background-color: rgb(223, 27, 203);
+  top: 120%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.45);
+  filter: blur(1em);
+  opacity: 0.7;
+}
+
+.boton-neon::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0 0 1em 0.5em rgb(223, 27, 203);
+  opacity: 0;
+  background-color: rgb(223, 27, 203);
+  z-index: -1;
+  transition: opacity 100ms linear;
+}
+
+.boton-neon:hover {
+  color: rgb(21, 15, 56);
+  text-shadow: none;
+}
+
+.boton-neon:hover::before {
+  opacity: 1;
+}
+
+.boton-neon:hover::after {
+  opacity: 1;
 }
