--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,7 @@ h1 {
   text-shadow: 0 0 0.125em hsl(0, 0%, 70%), 0 0 0.25em currentColor;
   position: unset;
 }
+
+#cuadrado-inactivo {
+  pointer-events: none;
+}
